# avere-smart-credit

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
score_engine/: .env.example  README.md  faucet-keypair.json  requirements.txt
score_engine/src/: amortization.py  config.py  income_data.py  macro_data.py  main.py  onchain_data.py  passkey_routes.py  score.py
scripts/: create_plaid_tokens.py
smartcontracts/: Anchor.toml  Cargo.toml  package.json
smartcontracts/programs/smartcontracts/: Cargo.toml
smartcontracts/programs/smartcontracts/src/: constants.rs  errors.rs  lib.rs
smartcontracts/programs/smartcontracts/src/instructions/: approve_traditional_loan.rs  close_loan.rs  deposit_sol.rs  deposit_usdc.rs  disburse_traditional.rs  initialize_bank_pool.rs  initialize_mock_kamino.rs  initialize_vault.rs  liquidate.rs  mod.rs  open_defi_loan.rs  rebalance_yield.rs  repay_installment.rs  update_score.rs  withdraw.rs
smartcontracts/programs/smartcontracts/src/state/: bank_pool.rs  loan_defi.rs  loan_traditional.rs  mock_kamino.rs  mod.rs  user_vault.rs
smartcontracts/scripts/: fund_demo_wallets.ts
smartcontracts/tests/: smartcontracts.ts
src/: App.tsx  index.css
src/adapters/: TurnkeyPasskeyAdapter.ts
src/components/: AvereLogo.tsx
src/contexts/: WalletProvider.tsx
src/hooks/: useActiveLoan.ts  usePlaidToken.ts  useProgram.ts  useScore.ts  useVault.ts  useWalletBalance.ts
src/lib/: score-api.ts  smartcontracts-types.ts  smartcontracts.json  solana.ts  turnkey.ts  (+1 more)
(+30 files in other folders)
