[package]
name = "smartcontracts"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smartcontracts"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
# Disables hardcoded mint/oracle address constraints for local testing.
# Test build:  cargo-build-sbf --tools-version v1.54 --features localnet && anchor test --skip-build
# Devnet build (no flag): cargo-build-sbf --tools-version v1.54
localnet = []


[dependencies]
anchor-lang  = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl   = { version = "0.31.1", features = ["token", "token_2022", "idl-build"] }
# Pin blake3 below 1.8 to avoid cpufeatures 0.3.0 which requires Cargo edition2024 (not in Cargo 1.79).
blake3       = ">=1.3, <1.8"

